--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html {
-  background: rgb(2,0,36);
-  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  background-image: linear-gradient(-180deg, #3F12A6 0%, #4064DF 100%);
   background-size: cover;
   height: 100%;
 
